--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 basic:
-    name: 'Klocko, McLaughlin and Davis'
+    name: 'Emmerich LLC'
     environments:
-        production: 'https://wilkinson.com/voluptatem-aut-quis-est-voluptatem'
+        production: 'https://casper.com/quia-eos-dolor-quidem-dolore-quos-provident-enim-rerum.html'
         staging: ''
         development: ''
     breakpoints:
